== Version History ==

x.x:

0.4 ():
 - Moved timeline back into admin context (requires Elgg 1.8.7)
 - Set default start date to 6 months ago, or site creation date if site is less than 6 months old
 - Added page-view tracking
 - Organized language strings better in preparation for new sections


0.3 (06/08/2012):

 - Initial Release: timeline functions