@@ -7,6 +7,8 @@ x.x:
  - Set default start date to 6 months ago, or site creation date if site is less than 6 months old
  - Added page-view tracking
  - Organized language strings better in preparation for new sections
+ - Moved timeline and pageview output to ajax loaded content
+ - batch processing timeline data and most pageview data to minimize OOM errors
 
 
 0.3 (06/08/2012):
